--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "types": [
-            "@types/mysql"
+            "@types/node"
         ]
     },
     "include" : [
