Added DerivedTable, renamed lateral to isLateral

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "./src/column-ref/**/*",
         "./src/used-ref/**/*",
         "./src/aliased-table/**/*",
+        "./src/derived-table/**/*",
         "./src/key/**/*",
         "./src/table/**/*.ts",
         "./src/candidate-key/**/*",
