Added expr interface

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
         "./src/primary-key/**/*",
         "./src/join/**/*",
         "./src/from-clause/**/*",
+        "./src/expr/**/*",
         "./src/index.ts"
     ]
 }
