--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "./src/from-clause/**/*",
         "./src/expr/**/*",
         "./src/expr-select-item/**/*",
+        "./src/tuple-util/**/*",
         "./src/select-item/**/*",
         "./src/select-clause/**/*",
         "./src/union/**/*",
