--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "diff": "^4.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-local": "^1.0.0",
+    "eslint-utils": "^1.4.1",
     "tape": "^4.11.0",
     "ts-node": "^8.3.0",
     "ts-simple-type": "^0.3.5",
