Added OrderByClause, improved quality-of-life for compile-time tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,7 @@
         "./src/sort-direction/**/*",
         "./src/order/**/*",
         "./src/order-by-clause/**/*",
+        "./src/constants.ts",
         "./src/index.ts"
     ]
 }
