Updated tests; moved OperatorType to top-level to avoid static initialization problems

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         ]
     },
     "include" : [
+        "./src/operator-type.ts",
         "./src/type-util/**/*",
         "./src/type-map/**/*",
         "./src/type-ref/**/*",
