--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,7 @@
         "./src/order-by-clause/**/*",
         "./src/constants.ts",
         "./src/unified-query/**/*",
+        "./src/union-order-by-clause/**/*",
         "./src/index.ts"
     ]
 }
