Better errors thrown when fetchOneOrUndefined()/fetchOne() encounters too many/few rows

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "ts-node -P ./test/run-time/tsconfig.json",
+    "test": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/bluebird-promise.ts",
     "build-custom-eslint-rules": "tsc -p ./custom-typescript-eslint-rules/tsconfig.json",
     "lint": "eslint --ext .ts",
     "lint-all": "npm run lint -- ./src",
@@ -16,7 +16,7 @@
     "accept-compile-time": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-actual.ts",
     "accept-one": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-one.ts",
     "test-compile-time-interactive": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/interactive.ts",
-    "test-run-time": "ts-node -P ./test/run-time/tsconfig.json ./test/run-time/runner.ts",
+    "test-run-time": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "count-loc": "find ./src -name '*.ts' | xargs wc -l"
   },
   "author": "anyhowstep",
@@ -31,11 +31,13 @@
   "homepage": "https://github.com/AnyhowStep/tsql#readme",
   "devDependencies": {
     "@anyhowstep/typed-env": "^2.1.0",
+    "@types/bluebird": "^3.5.27",
     "@types/diff": "^4.0.2",
     "@types/node": "^12.6.2",
     "@types/tape": "^4.2.33",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "bluebird": "^3.5.5",
     "c8": "^5.0.1",
     "diff": "^4.0.1",
     "eslint": "^5.16.0",
