Shifting stuff around, preparation for decimal support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
         "./src/error/**/*",
         "./src/execution/**/*",
         "./src/map-delegate/**/*",
+        "./src/decimal/**/*",
         "./src/index.ts"
     ]
 }
