--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,8 @@
         "./src/execution/**/*",
         "./src/map-delegate/**/*",
         "./src/decimal/**/*",
-        "./src/comparable-expr/**/*",
+        "./src/equatable-expr/**/*",
+        "./src/sortable-expr/**/*",
         "./src/fractional-arithmetic-expr/**/*",
         "./src/integer-arithmetic-expr/**/*",
         "./src/arithmetic-expr/**/*",
