--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,7 @@
         "./src/fractional-arithmetic-expr/**/*",
         "./src/integer-arithmetic-expr/**/*",
         "./src/arithmetic-expr/**/*",
+        "./src/insert/**/*",
         "./src/index.ts"
     ]
 }
