--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,7 @@
         "./src/arithmetic-expr/**/*",
         "./src/insert/**/*",
         "./src/insert-select/**/*",
+        "./src/update/**/*",
         "./src/index.ts"
     ]
 }
