--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,7 @@
         "./src/insert-select/**/*",
         "./src/update/**/*",
         "./src/schema-introspection/**/*",
+        "./src/schema-validation/**/*",
         "./src/index.ts"
     ]
 }
