Added more SchemaValidation tests

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test-run-time": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "test-run-time-bigint-polyfill": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bigint-polyfill.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "sanity-check": "(npm run rebuild) && (npm run test-run-time) && (npm run test-run-time-bigint-polyfill) && (npm run test-compile-time)",
+    "c8-report": "(c8 --reporter=html npm run test-run-time)",
     "count-loc": "find ./src -name '*.ts' | xargs wc -l"
   },
   "author": "anyhowstep",
@@ -42,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "bluebird": "^3.5.5",
-    "c8": "^5.0.1",
+    "c8": "^5.0.4",
     "diff": "^4.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-local": "^1.0.0",
