--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ git:
   depth: 1
 
 script:
-  - npm run sanity-check
+  - mkdir ./test/compile-time/actual-output
+  - npm run sanity-check-travis
   - npm install codecov
 
 after_success:
