--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc",
     "rebuild": "(npm run clean) && (npm run build)",
     "test-compile-time": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/runner.ts",
+    "test-compile-time-travis": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/runner-travis.ts",
     "test-compile-time-one": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/test-one.ts",
     "accept-compile-time": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-actual.ts",
     "accept-one": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-one.ts",
@@ -21,7 +22,7 @@
     "test-run-time": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "test-run-time-bigint-polyfill": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bigint-polyfill.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "sanity-check": "(npm run rebuild) && (c8 --reporter=html npm run test-run-time) && (npm run test-run-time-bigint-polyfill) && (npm run test-compile-time)",
-    "sanity-check-travis": "(npm run rebuild) && (npm run test-compile-time) && (c8 --reporter=json npm run test-run-time) && (npm run test-run-time-bigint-polyfill)",
+    "sanity-check-travis": "(npm run rebuild) && (npm run test-compile-time-travis) && (c8 --reporter=json npm run test-run-time) && (npm run test-run-time-bigint-polyfill)",
     "c8-report": "(c8 --reporter=html npm run test-run-time)",
     "count-loc": "find ./src -name '*.ts' | xargs wc -l"
   },
