--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "types": []
     },
     "include" : [
+        "./src/data-type/**/*",
         "./src/buffer.ts",
         "./src/operator-type.ts",
         "./src/type-util/**/*",
