Added isolation level and access mode to transactions; more tests and clean up needed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,6 +77,8 @@
         "./src/promise-util/**/*",
         "./src/async-queue.ts",
         "./src/event/**/*",
+        "./src/isolation-level.ts",
+        "./src/transaction-access-mode.ts",
         "./src/index.ts"
     ]
 }
