Initial implementation of TableWhere; added TableWhere.fetchOne()

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,6 +79,7 @@
         "./src/event/**/*",
         "./src/isolation-level.ts",
         "./src/transaction-access-mode.ts",
+        "./src/table-where/**/*",
         "./src/index.ts"
     ]
 }
