--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "accept-compile-time": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-actual.ts",
     "accept-one": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/accept-one.ts",
     "test-compile-time-interactive": "ts-node -P ./test/compile-time/tsconfig.json ./test/compile-time/interactive.ts",
-    "test-run-time": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
-    "test-run-time-bigint-polyfill": "ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bigint-polyfill.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
+    "test-run-time": "node --max_old_space_size=8192 ./node_modules/.bin/ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
+    "test-run-time-bigint-polyfill": "node --max_old_space_size=8192 ./node_modules/.bin/ts-node -P ./test/run-time/tsconfig.json -r ./test/run-time/tape-stream.ts -r ./test/run-time/bigint-polyfill.ts -r ./test/run-time/bluebird-promise.ts ./test/run-time/runner.ts",
     "sanity-check": "(npm run rebuild) && (c8 --reporter=html npm run test-run-time) && (npm run test-run-time-bigint-polyfill) && (npm run test-compile-time)",
     "sanity-check-travis": "(npm run rebuild) && (npm run test-compile-time-travis) && (c8 --reporter=json npm run test-run-time) && (npm run test-run-time-bigint-polyfill)",
     "c8-report": "(c8 --reporter=html npm run test-run-time)",
