ORDER BY clause no longer allowed to use outer query ref because of SQLite; removed cachedSql from some AST nodes; prevent nested aggregate expr in ORDER BY clause; added throwIfNull

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "./src/column/**/*",
         "./src/column-map/**/*",
         "./src/column-ref/**/*",
-        "./src/aggregate-column/**/*",
+        "./src/expr-column/**/*",
         "./src/used-ref/**/*",
         "./src/aliased-table/**/*",
         "./src/derived-table/**/*",
